fixed overflowing card with movie poster

--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,15 @@ nav {
   border-bottom: unset;
 }
 .row {
-  /* margin: 0 5px 20px 5px; */
+  margin: 0 5px 20px 5px;
+}
+.card-image img {
+  height: 18.75rem;
+}
+
+@media (max-width: 600px) {
+  .card-image img {
+    height: 37.5rem;
+   
+  }
 }
